# october

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  Makefile  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
actor/: Cargo.toml
actor/src/: actor.rs  error.rs  file_journal.rs  journal.rs  lib.rs  persistence_id.rs  runtime.rs
agentcore/: Cargo.toml
agentcore/src/: agent.rs  error.rs  events.rs  lib.rs  provider.rs  tool.rs
agentcore/tests/: agent_test.rs  error_test.rs
agentcore/tests/support/: mod.rs
cli/: Cargo.toml
cli/src/: capabilities.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  run.rs  terminal_sink.rs  validate.rs
cli/src/capabilities/: default.linux.json  default.macos.json
cli/src/daemon/: mod.rs  protocol.rs
cli/tests/: cli_e2e.rs  sandbox_e2e.rs
docs/superpowers/plans/: 2026-05-26-agentcore.md  2026-05-27-executor.md  2026-05-28-runtime-implementation.md  2026-05-30-october-cli-nono-impl.md  2026-05-31-k8s-runtime-provider.md  2026-05-31-october-daemon-parallel-jobs.md  2026-05-31-workspace-context-loading.md
docs/superpowers/specs/: 2026-05-26-agentcore-design.md  2026-05-27-executor-design.md  2026-05-28-runtime-design.md  2026-05-28-workflow-design.md  2026-05-29-october-cli-nono-design.md  2026-05-31-october-daemon-parallel-jobs-design.md  2026-05-31-workspace-context-loading-design.md
examples/: README.md  dev-workflow-capabilities.json  dev-workflow.json
executor/: Cargo.toml
executor-client/: Cargo.toml
executor-client/src/: client.rs  lib.rs  transport.rs  ws_transport.rs
executor/src/: connected_registry.rs  env_scrub.rs  error.rs  executor.rs  inmem_transport.rs  k8s_provider.rs  lib.rs  process_provider.rs  provider.rs  registry.rs  runtime_listener.rs  socket_transport.rs
executor/tests/: integration_test.rs
fluorite/: agent.fl  capabilities.fl  daemon.fl  events.fl  executor.fl  runtime.fl  workflow.fl
models/: Cargo.toml  build.rs
models/src/: lib.rs
providers/anthropic/: Cargo.toml
providers/anthropic/src/: lib.rs
providers/anthropic/tests/: integration.rs
providers/mock-llm/: Cargo.toml
providers/mock-llm/src/: lib.rs  server.rs
runtime/: Cargo.toml
runtime-client/: Cargo.toml
runtime-client/src/: client.rs  lib.rs  transport.rs  ws_transport.rs
runtime-client/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  replace_in_file.rs  write_file.rs
runtime/src/: lib.rs  main.rs  sandbox.rs  scan.rs
runtime/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  replace_in_file.rs  write_file.rs
server/: Cargo.toml
server/src/: error.rs  executor_client.rs  handler.rs  lib.rs  registry.rs  server.rs
supervisor/: Cargo.toml
supervisor/src/: history.rs  job_actor.rs  lib.rs  spec.rs  supervisor_actor.rs
supervisor/tests/: daemon_e2e.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: agent_e2e.rs
workflow/: Cargo.toml
workflow/src/: agent_actor.rs  context.rs  lib.rs  workflow_actor.rs  workspace.rs
workflow/tests/: workflow_e2e.rs  workspace_context.rs
