[workspace]
members = [
    "agentcore",
    "server",
    "executor",
    "runtime",
    "models",
]
resolver = "2"

[workspace.dependencies]
fluorite        = "0.6.0"
fluorite_codegen = "0.6.0"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
schemars        = "1.0"

# Production code bans panic-prone constructs; test code opts out per-file via
# #![cfg_attr(test, allow(clippy::unwrap_used, ...))]
[workspace.lints.clippy]
unwrap_used             = "deny"
expect_used             = "deny"
panic                   = "deny"
wildcard_enum_match_arm = "deny"
