[package]
name = "actor"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dependencies]
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
