[package]
name = "agentcore"
version = "0.1.0"
edition = "2024"

[dependencies]
models      = { path = "../models" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }

[lints]
workspace = true
