[package]
name = "agentcore"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dependencies]
models      = { path = "../models" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
jsonschema  = { workspace = true }

[lints]
workspace = true
