[package]
name = "executor-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
models            = { path = "../models" }
runtime-client    = { path = "../runtime-client" }
async-trait       = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
uuid              = { workspace = true }
serde_json        = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util      = { workspace = true, optional = true }

[features]
default = ["ws"]
ws = ["dep:tokio-tungstenite", "dep:futures-util"]

[lints]
workspace = true
