[package]
name = "executor"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dependencies]
models            = { path = "../models" }
tokio             = { workspace = true, features = ["process"] }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
serde_json        = { workspace = true }
uuid              = { workspace = true }
thiserror         = { workspace = true }
async-trait       = { workspace = true }
tokio-util        = { workspace = true }

[dev-dependencies]
server = { path = "../server" }

[lints]
workspace = true
