[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
models            = { path = "../models" }
runtime-client    = { path = "../runtime-client" }
executor-client   = { path = "../executor-client", default-features = false }
tokio             = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
serde_json        = { workspace = true }
uuid              = { workspace = true }
thiserror         = { workspace = true }
async-trait       = { workspace = true }
tokio-util        = { workspace = true }

[dev-dependencies]
server   = { path = "../server" }
tempfile = "3"

[lints]
workspace = true
