[package]
name = "models"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dependencies]
fluorite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
schemars   = { workspace = true }
derive-new = { workspace = true }

[build-dependencies]
fluorite_codegen = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
