[package]
name = "runtime-client"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dependencies]
models      = { path = "../models" }
agentcore   = { path = "../agentcore" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }

[lints]
workspace = true
