[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[[bin]]
name = "october-runtime"
path = "src/main.rs"

[features]
default = ["sandbox"]
sandbox = ["dep:nono"]

[dependencies]
models        = { path = "../models" }
tokio         = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util  = { workspace = true }
serde_json    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
regex         = "1"
glob          = "0.3"
# Pinned to the 0.53.x line: it carries the same Sandbox/CapabilitySet API as 0.59
# but keeps MSRV 1.74 (0.54+ require rustc 1.95). default-features=false drops the
# optional system-keyring dependency.
nono          = { version = "0.53", default-features = false, optional = true }

[dev-dependencies]
tempfile      = "3"

[lints]
workspace = true
