[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[[bin]]
name = "october-runtime"
path = "src/main.rs"

[features]
default = ["sandbox"]
sandbox = ["dep:nono"]

[dependencies]
models        = { path = "../models" }
tokio         = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util  = { workspace = true }
serde_json    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
regex         = "1"
glob          = "0.3"
# Forked nono carrying the macOS SecurityServer / Secure-Transport TLS fix
# (zhxiaogg/nono) so cargo's libgit2 can complete its TLS handshake under the sandbox.
# default-features=false drops the optional system-keyring dependency.
nono          = { git = "https://github.com/zhxiaogg/nono", rev = "1273578", default-features = false, optional = true }

[dev-dependencies]
tempfile      = "3"

[lints]
workspace = true
