[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
models            = { path = "../models" }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
serde_json        = { workspace = true }
uuid              = { workspace = true }
thiserror         = { workspace = true }
async-trait       = { workspace = true }

[lints]
workspace = true
