[package]
name = "mock-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
futures     = "0.3"
parking_lot = { workspace = true }
uuid        = { workspace = true }

[lints]
workspace = true
